data/derived/comb/progs/unify/prog2508.ml.out
Characters 62-63:
  | h :: t -> if (k, d) = l
                          ^
Error: This expression has type 'a list
       but an expression was expected of type 'b * 'c
